Bug for red colur not showing fixed

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -10698,3 +10698,6 @@ legend.scheduler-border {
     // top:83px!important;
   }
 }
+.jss > tbody > tr > td.readonly.compareAndSelectRed {
+  color: #BA0C2F !important;
+}
